Immersibrook 1.0.0 - The Fall 2021 Update

NEW:
-Ranged Chat.
-Smartphones and Radios.
-Candy.
-Hard Hats in all sixteen Minecraft colors.
-Food Dyes (Red, Green, Blue, Yellow, and White).
-Colored Sugar (Red, Green, Blue, Orange, Purple, Brown, Lime, and Pink).
-Pink Lemonade Drink.
-Sparkling Pink Lemonade.
-White Chocolate.
-Chocolate Truffles in a variety of flavors.
-Trusses (Steel, Iron, Nickel, and Constantan).
-Nickel Rod.
-Constantan Rod.
-Decorative Face Masks.
-Food Boxes for Sugar, Flour, Cornmeal, Coffee, and the new Chocolate Truffles.
-Industrial-themed Ceiling Lights.
-Narrow Ceiling Lights.
-Concrete Columns (not to be confused with Pillars).
-Police and Fire Gear.
-Modern alternative to the Ban Hammer.
-Plastiglass Blocks and Panes.
-Manhole Blocks and a Manhole Cover Lifter tool.
-Ceiling Mounted Exit Signs.
-Peppermint Bark.

CHANGES/FIXES:
-Pillars are now affected by gravity.
-The Safety Vests creative menu category has been renamed to Safety and houses both the vests and hard hats.
-The Ban Hammer's sounds can now be manually set through a key press.
-Ceiling Lights are now rotational.
-Ore Dictionary entries for Plastics have been redone.
-New 3D Model for the Night Vision Goggles.

MOD INTERACTIONS:
(Note: Mod interactions only occur if Immersibrook detects them. This feature can be disabled in wbtc.cfg)
[The RC Mod] Immersibrook now overrides the default RC Mod plastic recipe.

KNOWN ISSUES:
-None so far.

REMOVALS:
-Aluminum. Use IE's aluminum instead.
-/tpdim command.