@@ -6,9 +6,9 @@ public class Reference
 {
 	public static final String MODID = "wbtc";
 	public static final String MODNAME = "Immersibrook";
-	public static final String UPDATE_NAME = "The Late 2021 Update - Mesabrook Playtest Pre-Release Build";
-	public static final String VERSION = "1.0.0-PR1";
-	public static final String BUILD_DATE = "December 2021";
+	public static final String UPDATE_NAME = "The Technology Update";
+	public static final String VERSION = "1.0.0";
+	public static final String BUILD_DATE = "Whenever :shrug:";
 	public static final String CHANGELOG = "https://bit.ly/3wpUwSn";
 	public static final String UPDATE_URL = "https://raw.githubusercontent.com/RavenholmZombie/RavenholmZombie/main/update.json";
 	
